# nukm

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  HANDOFF_PROTOCOL.md  LICENSE-APACHE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/nukm-cli/: Cargo.toml
crates/nukm-cli/src/: main.rs
crates/nukm-core/: Cargo.toml
crates/nukm-core/src/: lib.rs
docs/: phase-1-plan-v1.1-amendments.md  phase-1-plan.md
docs/adr/: 0001-crate-boundaries.md  0002-platform-trait.md  0003-detector-vs-cache-provider.md  README.md
docs/ecosystem-fit/: README.md  docker.md  go.md  java.md  node.md  python.md  rust.md
docs/handoffs/: 2026-04-17-arthur-to-ingrid-c-test-scaffolding.md  2026-04-17-arthur-to-kenji-c-ecosystem-ci.md  2026-04-17-arthur-to-magnus-c-skeleton.md
