[workspace]
resolver = "3"
members = [
    "crates/nukm-core",
    "crates/nukm-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Estevan <eb+anthropic@belnomo.com>"]
repository = "https://github.com/estevanbelnomo/nukm"
homepage = "https://nukm.io"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
