[workspace]
resolver = "3"
members = [
    "crates/nukm-core",
    "crates/nukm-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Estevan <eb+anthropic@belnomo.com>"]
repository = "https://github.com/estevanbelnomo/nukm"
homepage = "https://nukm.io"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# C-phase skeleton allowances; tighten in B1 when real errors, panics, and return
# values exist to document. See ADR-0001.
todo = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
# Doc comments in Nukm are prose-heavy and mention proper nouns freely
# (Docker, Tauri, BuildKit, WSL, APFS, ...). Backticking every one is noise.
doc_markdown = "allow"

[workspace.dependencies]
nukm-core = { path = "crates/nukm-core" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
